--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
 pygame
 noise
-numpy
-scipy
-torch
-torchvision
-torchaudio
-scikit-learn
-pandas
-matplotlib
-seaborn
-tensorboard
-opencv-python
-protobuf
+numpy>=1.26.4
+scipy>=1.12.0
+scikit-learn>=1.4.1
+pandas>=2.2.1
+matplotlib>=3.8.3
+seaborn>=0.13.2
+tensorboard>=2.16.2
+opencv-python>=4.9.0.80
+protobuf>=4.25.3
+
+# CUDA 12.1 PyTorch builds
+torch==2.2.0+cu121
+torchvision==0.17.0+cu121
+torchaudio==2.2.0+cu121
+--extra-index-url https://download.pytorch.org/whl/cu121
