--- a/UTILITIES/requirements.txt
+++ b/UTILITIES/requirements.txt
@@ -10,6 +10,7 @@ seaborn>=0.12.0
 tensorboard>=2.12.0
 opencv-python>=4.8.0
 protobuf>=4.21.0
+tqdm
 
 # PyTorch - flexible version requirements for different CUDA versions
 # The system will automatically detect and use the appropriate version
