--- a/settings.json
+++ b/settings.json
@@ -17,10 +17,10 @@
         "enable_plots": false
     },
     "config": {
-        "ENABLE_TENSORBOARD": true,
+        "ENABLE_TENSORBOARD": false,
         "ENABLE_LOGGING": false,
         "ENABLE_PLOTS": false,
-        "ENABLE_PROFILE_BOOL": true,
+        "ENABLE_PROFILE_BOOL": false,
         "EPISODES_LIMIT": 30,
         "STEPS_PER_EPISODE": 5000,
         "FPS": 60,
@@ -76,7 +76,7 @@
         "USE_HUBER_LOSS": true,
         "USE_FOCAL_LOSS": false,
         "LOSS_NORMALIZATION": true,
-        "HEADLESS_MODE": false,
+        "HEADLESS_MODE": true,
         "FORCE_DEPENDENCY_CHECK": false
     }
 }
