Implement Hierarchical Emergent Learning System and Parametric Strategy Execution
- Transformed the Multi-Agent Faction Wars architecture to support a hierarchical emergent learning system, enabling agents to exhibit strategic intelligence and adaptive behavior.
- Introduced a parametric HQ strategy system allowing continuous parameter outputs for enhanced strategy control.
- Added adaptive agent action selection mechanisms, including failure analysis and alternative strategies.
- Implemented a hierarchical reward system linking HQ decisions to agent performance.
- Enhanced multi-agent coordination through learned communication and experience sharing systems.
- Updated settings for improved world dimensions and headless mode functionality.
- Refactored agent behaviors to incorporate adaptive responses and opportunistic actions.

This release marks a significant evolution in AI capabilities within the game, fostering more dynamic and intelligent agent interactions.

--- a/settings.json
+++ b/settings.json
@@ -26,9 +26,9 @@
         "FPS": 60,
         "SCREEN_WIDTH": 1152.0,
         "SCREEN_HEIGHT": 648.0,
-        "CELL_SIZE": 20,
-        "WORLD_WIDTH": 800,
-        "WORLD_HEIGHT": 800,
+        "CELL_SIZE": 20.0,
+        "WORLD_WIDTH": 1600,
+        "WORLD_HEIGHT": 1600,
         "Terrain_Seed": 65,
         "NOISE_SCALE": 100,
         "NOISE_OCTAVES": 4,
@@ -76,7 +76,7 @@
         "USE_HUBER_LOSS": true,
         "USE_FOCAL_LOSS": false,
         "LOSS_NORMALIZATION": true,
-        "HEADLESS_MODE": true,
+        "HEADLESS_MODE": false,
         "FORCE_DEPENDENCY_CHECK": false
     }
 }
