Fixed State Size bug, improved error handling of headless mode and logging system. corrected logger error.

--- a/settings.json
+++ b/settings.json
@@ -18,7 +18,7 @@
     },
     "config": {
         "ENABLE_TENSORBOARD": false,
-        "ENABLE_LOGGING": false,
+        "ENABLE_LOGGING": true,
         "ENABLE_PLOTS": false,
         "ENABLE_PROFILE_BOOL": false,
         "EPISODES_LIMIT": 30,
@@ -27,8 +27,8 @@
         "SCREEN_WIDTH": 1152.0,
         "SCREEN_HEIGHT": 648.0,
         "CELL_SIZE": 20.0,
-        "WORLD_WIDTH": 1600,
-        "WORLD_HEIGHT": 1600,
+        "WORLD_WIDTH": 1000,
+        "WORLD_HEIGHT": 1000,
         "Terrain_Seed": 65,
         "NOISE_SCALE": 100,
         "NOISE_OCTAVES": 4,
