Update HEADLESS_MODE functionality and improve logging
- Modified game_manager.py to keep the pygame display open in HEADLESS_MODE for minimal input handling, providing feedback on the display status.
- Enhanced logging in agent_behaviours.py and game_manager.py for better error tracking and visibility during agent initialization and spawning.
- Refactored print statements for clarity and consistency across various modules.

These changes aim to improve the user experience in headless mode and enhance the overall logging system for better debugging.

--- a/settings.json
+++ b/settings.json
@@ -76,7 +76,7 @@
         "USE_HUBER_LOSS": true,
         "USE_FOCAL_LOSS": false,
         "LOSS_NORMALIZATION": true,
-        "HEADLESS_MODE": false,
+        "HEADLESS_MODE": true,
         "FORCE_DEPENDENCY_CHECK": false
     }
 }
